syntax = "proto3";

//1.添加google的proto引用。注意引用目录，注意两个google的文件之间也有引用，需要根据所放目录进行修改
import "Protos/google/api/annotations.proto";

option csharp_namespace = "GB28181.Service.Protos.Ptz";

package GrpcPtzControl;

/// <summary>
/// ptz控制 
///</summary>
service PtzControl {
  // Sends a greeting
  rpc PtzDirect (PtzDirectRequest) returns (PtzDirectReply) {
  // 添加webapi 设置，需调用上面引用的google api实现（google.api.http），本例谓词选用post（后面是url)，body设置通配符，所以可以接收传入的参数
 // gb28181.server  iis express 跑起来后接口post地址:http://localhost:60500/v1/PtzControl/PtzDirect  参数json如:{"xyz":{"X":0,"Y":4,"Z":0},"speed":3,"deviceid":"78978201001320000025"}
    option (google.api.http) = {
      get: "/v1/PtzControl/PtzDirect"
      body: "*"
    };
  }
}


// The request message.
message PtzDirectRequest {
	PtzXYZ xyz = 1;//执行内容
	int32 speed = 2;//速度 speed*50
	string deviceid = 3;//设备通道ID
}

// The response message.
message PtzDirectReply {
  string message = 1;
}

//ptz 的xyz偏移
message PtzXYZ {
	int32 X = 1;//左右
	int32 Y = 2;//上下
	int32 Z = 3;//变倍+-
}